# app/Http/Controllers/ListAttractionController.php
@@ -7,15 +7,40 @@ use App\Chore\Infra\AttractionRepositoryDatabase;
 use App\Chore\Infra\MySqlAdapter;
 use App\Chore\UseCases\ListAttractions;
 use App\Models\Attraction;
+use Illuminate\Http\JsonResponse;
 use Illuminate\Http\Request;
 
 class ListAttractionController extends Controller
 {
-
+    /**
+     * @OA\Get(
+     *   path="/api/v1/attractions/{place}",
+     *   tags={"attractions"},
+     *   operationId="ListAttractionController@handle",
+     *   description="Returns all attractions available in a place.",
+     *   security={ {"token": {} }},
+     *   @OA\Parameter(
+     *     name="place",
+     *     description="place name",
+     *     in="path",
+     *     @OA\Schema(
+     *       type="string"
+     *     )
+     *   ),
+     *   @OA\Response(
+     *     response=200,
+     *     description="successful operation",
+     *     @OA\JsonContent(
+     *       type="array",
+     *       @OA\Items(ref="#/components/schemas/Attraction")
+     *     ),
+     *   ),
+     *   @OA\Response(response=404, description="Not found operation"),
+     * )
+     * @return JsonResponse
+     */
     public function handle(Request $request)
     {
-
-
         $dao = new AttractionRepositoryDatabase();
         $listAttractions = new ListAttractions($dao);
         $output = $listAttractions->handle($request->place);
